expressapp/public/stylesheets/style.css
#codeEditor {
    width: 730px;
    height: 540px;
    margin: 10px !important;
    border: 1px solid gray;
    position: relative !important;
    transform: none !important;
}

#paramEditor {
    width: 730px;
    height: 125px;
    margin: 10px !important;
    border: 1px solid gray;
    position: relative !important;
    transform: none !important;
}

#puppeteerTerminal {
    width: 720px;
    height: 100px;
    overflow-y: auto;
    border: 1px solid gray;
    margin: 10px;
    padding: 5px;
}

#puppeteerTerminalClearButton {
    position: absolute;
    right: 15px;
    margin: 5px;
}

#puppeteerTerminalArea {
    position: relative;
}

.clickableButton {
    cursor: pointer;
}

body #codePane {
    border: 1px solid gray;
    padding: 5px;
    position: relative !important;
    transform: none !important;
}

body {
    position: relative;
}

#fileSelection {
    margin: 5px;
}

#fileSelectMenu {
    max-width: 273px;
}

.fileControls {
    padding: 5px;
    margin: 5px;
    border: 1px solid rgb(223, 223, 223);
}

#runCode {
    font-size: 16px;
    margin: 10px;
}

#currentFileName {
    width: 200px;
}

.errorText {
    color: red;
}

/* From https://stackoverflow.com/questions/7492062/css-overflow-scroll-always-show-vertical-scroll-bar */
::-webkit-scrollbar {
    -webkit-appearance: none;
    width: 7px;
}
  
::-webkit-scrollbar-thumb {
    border-radius: 4px;
    background-color: rgba(0, 0, 0, .5);
    box-shadow: 0 0 1px rgba(255, 255, 255, .5);
}
/* End */

.redLineDecoration {
    background: rgb(255, 91, 91);
	width: 5px !important;
	margin-left: 3px;
}

.greenLineDecoration {
    background: rgb(89, 197, 89);
	width: 5px !important;
	margin-left: 3px;
}

.grayLineDecoration {
    background: rgb(172, 171, 171);
	width: 5px !important;
	margin-left: 3px;
}


.tooltip {
    /*background-color: #333;*/
    color: white;
    /*padding: 5px 10px;*/
    padding: 10px;
    border-radius: 4px;
    font-size: 13px;
    position: absolute;
    right: 0px;
    top: 0px;
    display: none;
    width: 570px;
    height: 360px;
    background-color: white;
    color: black;
    border: 1px solid gray;
    /*z-index: -1;*/
}

.tooltip[data-show] {
    display: block;
    /*display: grid;
    grid-template-columns: 70px repeat(auto-fit, 250px);
    grid-template-rows: repeat(2, 125px);
    grid-auto-flow: column;
    grid-column-gap: 10px;
    grid-row-gap: 10px;*/
}

.beforeAfterLabel {
    position: relative;
    /*text-align: center;*/
}

.snapshot {
    /*position: absolute;*/
    position: relative;
    width: 250px;
    height: 125px;
}

.snapshots {
    border-left: 1px solid gray;
}

.beforeSnapshot {
    top: 0px;
    left: 0px;
}

.afterSnapshot {
    /*top: 0px;
    right: 0px;*/
    /*top: 125px;*/
    left: 0px;
}

/*.monaco-editor, .monaco-editor-background, .monaco-editor .inputarea.ime-input {
    background-color: transparent !important;
}*/

#showSnapshots {
    display: none;
}

#labels {
    position: absolute;
    display: grid;
    grid-template-columns: 70px;
    grid-template-rows: 200px 125px;
    grid-auto-flow: column;
    grid-column-gap: 10px;
    grid-row-gap: 10px;
    height: 360px;
}

#snapshots {
    position: absolute;
    display: grid;
    grid-template-columns: repeat(auto-fit, 250px);
    grid-template-rows: 20px 125px 20px 125px;
    grid-auto-flow: column;
    grid-column-gap: 10px;
    grid-row-gap: 10px;
    overflow-x: scroll;
    right: 0px;
    width: 520px;
    height: 360px;
}

.downArrow {
    text-align: center;
}

